[MD Settings] Update the message in the sign out dialog for (non-)managed accounts.

BUG=640097, 640095

Review-Url: https://codereview.chromium.org/2455303002
Cr-Commit-Position: refs/heads/master@{#428511}

Former-commit-id: 685f5586bab6fc956a133dd84de505ea5483833f